# esp32-os

./: .gitignore  README.md  firmware.json  test_click.py  visioning.py
arduino/: arduino.ino
esp32/: capability.h  esp32.ino  fs_manager.h  lua_engine.cpp  lua_engine.h  os_manager.h  package_manager.h  robot_api.h  shell_server.h  task_manager.h  wifi_manager.h  wiring.md
esp32-cam/: esp32-cam.ino
esp32-ssh/: CMakeLists.txt
esp32-ssh/apps/esp32-app/: config.json  main.py
esp32-ssh/apps/robot-face-demo/: config.json  main.py
esp32-ssh/src/: app_config.h  config_store.h  dependency_installer.h  exe_path.h  main.cpp  process_launch.h  python_finder.h  sha256.cpp  sha256.h  socket_compat.h
esp32cam_stream/: esp32cam_stream.ino
sd_card_diagnostic/: sd_card_diagnostic.ino
